# decontaminator

./: README.md  pyproject.toml  requirements.txt  run.py  setup.py
decontaminator/: __init__.py  __main__.py  myjson.py  ngrams.py  normalize.py  reader.py
decontaminator/cython/: tokenizer.pyx
tests/: __init__.py  test___main__.py  test_ngrams.py  test_normalize.py  test_reader.py
tests/cython/: __init__.py  test_tokenizer.py
tests/fixtures/: contaminated_ngrams_per_dataset.json  contaminated_search_map.json  contaminated_search_map_multi_version.json  contaminated_search_ngram_results.json  contaminated_search_ngram_results_common.json  contaminated_search_results.json  converted_indices.json  dataset_for_map_create.jsonl  decontaminate.jsonl  decontaminate_map.json  decontaminated.jsonl  decontaminated_common.jsonl  filtering_indices.json  indices.json  map_metadata_for_indices_conversion.json
tests/fixtures/filtered_hf_dataset/: test.jsonl
tests/fixtures/hf_dataset/: test.jsonl  validation.jsonl
